[package]
name = "cryo-sessions"
version = "0.0.2"
edition = "2021"
authors = ["asahi <hexeo.dev@gmail.com>"]
license = "MIT"
repository = "https://github.com/reloginn/cryo-sessions"
documentation = "https://docs.rs/cryo-sessions/latest/cryo-sessions"
description = "Crate for session management using Redis"

[dependencies]
rand = "0.8.5"
redis = { version = "0.23.3", features = ["r2d2", "ahash", "tokio-comp"] }
